Fix home page alignment issues

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -76,8 +76,12 @@ body {
 
 
 /* home page */
+.home-page-col-sm-6 {
+    padding-left: 0px;
+}
+
 .home-page-icon {
-    padding: 6px 12px;    
+    padding: 6px 8px;    
 }
 
 .home-section-header {
